Fix dropdown selectors being visible even when read-only

--- a/resources/assets/less/bem/beatmap-discussion-editor.less
+++ b/resources/assets/less/bem/beatmap-discussion-editor.less
@@ -77,10 +77,6 @@
 
     z-index: @z-index--blackout-visible;
 
-    .@{_top}--edit-mode & {
-      cursor: default;
-    }
-
     &::after {
       .fas();
       .full-size();
@@ -93,11 +89,17 @@
     }
 
     &:hover {
-      &:after {
+      &::after {
         opacity: 1;
-        .@{_top}--edit-mode & {
-          opacity: 0;
-        }
+      }
+    }
+
+    &--readonly {
+      background-color: transparent;
+      cursor: default;
+
+      &::after {
+        display: none;
       }
     }
   }
